[Server] Added Gradle docker plugin. [Client] Added Gradle docker plugin.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ group=hiper2d
 description=Spring Kotlin Gradle demo
 version=0.1.0-SNAPSHOT
 
+dockerPluginVersion=0.13.0
+nodePluginVersion=1.2.0
 kotlinVersion=1.1.51
-
 springBootVersion="2.0.0.M4"
