--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,16 @@
   "author": "hiper2d",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "4.4.4",
-    "@angular/common": "4.4.4",
-    "@angular/compiler": "4.4.4",
-    "@angular/compiler-cli": "4.4.4",
-    "@angular/core": "4.4.4",
-    "@angular/forms": "4.4.4",
-    "@angular/http": "4.4.4",
-    "@angular/platform-browser": "4.4.4",
-    "@angular/platform-browser-dynamic": "4.4.4",
-    "@angular/router": "4.4.4",
+    "@angular/animations": "4.4.6",
+    "@angular/common": "4.4.6",
+    "@angular/compiler": "4.4.6",
+    "@angular/compiler-cli": "4.4.6",
+    "@angular/core": "4.4.6",
+    "@angular/forms": "4.4.6",
+    "@angular/http": "4.4.6",
+    "@angular/platform-browser": "4.4.6",
+    "@angular/platform-browser-dynamic": "4.4.6",
+    "@angular/router": "4.4.6",
     "@angularclass/hmr": "^2.1.3",
     "@angularclass/hmr-loader": "^3.0.4",
     "core-js": "^2.5.1",
@@ -44,10 +44,9 @@
     "raw-loader": "^0.5.1",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
     "tslint": "^5.7.0",
     "rimraf": "^2.6.2",
-    "url-loader": "^0.5.9",
+    "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.3",
     "webpack-merge": "^4.1.0"
@@ -55,6 +54,7 @@
   "scripts": {
     "start": "webpack-dev-server --profile --watch --progress",
     "hmr": "webpack-dev-server --profile --watch --progress",
+    "preprod": "npm run clean",
     "prod": "npm run aot",
     "prodServer": "webpack-dev-server --config config/webpack.prod.js --open",
     "clean": "rimraf ./dist",
